# pydantic-universal-settings

./: CHANGELOG.md  pyproject.toml
example/: __main__.py  app.py  config.py
pydantic_universal_settings/: __init__.py  cli.py  main.py
