[tool.poetry]
name = "pydantic-universal-settings"
version = "0.1.0"
description = ""
authors = ["tc-imba <liuyh970615@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
click-option-group = "^0.5.3"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
python = "^3.6.1"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
